tracing-wide/tests/ui/seal.stderr
error[E0277]: the trait bound `Sneaky: tracing_wide::__private::Sealed` is not satisfied
 --> tests/ui/seal.rs:6:52
  |
6 | impl tracing_wide::__private::MessageBehaviour for Sneaky {
  |                                                    ^^^^^^ unsatisfied trait bound
  |
help: the trait `tracing_wide::__private::Sealed` is not implemented for `Sneaky`
 --> tests/ui/seal.rs:4:1
  |
4 | struct Sneaky;
  | ^^^^^^^^^^^^^
note: required by a bound in `tracing_wide::__private::MessageBehaviour`
 --> src/lib.rs
  |
  |     pub trait MessageBehaviour: Sealed {
  |                                 ^^^^^^ required by this bound in `MessageBehaviour`
